--- a/meetanyway/css/globe.css
+++ b/meetanyway/css/globe.css
@@ -1,8 +1,16 @@
-#globekit-container {
+body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100vh;
+  background-color: #111;
+}
+
+#globekit-container {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
